<resources>
    <string name="app_name">Tenunaraapplication</string>
    <string name="splash_name">Tenunara</string>
    <string name="title_menu_4">WOHOO! WELCOME TO TENUNARA</string>
    <string name="desc_menu_1">Here you can find information regarding the names  and types of woven fabrics that you have with the meanings contained in them.</string>
    <string name="desc_menu_2">Here we also provide information on weaving craftsmen according to the area you choose and also information about the training.</string>
    <string name="desc_menu_3">And here you can see woven fabrics that are sought after every week.</string>
    <string name="learn_now">Next</string>
    <string name="button_login">Login</string>
    <string name="name_warning">Nama tidak boleh kosong</string>
    <string name="email_warning">Format email salah</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="password_warning">Kata sandi harus memiliki minimal 6 karakter</string>
    <string name="register_success">Daftar berhasil</string>
    <string name="register_fail">Daftar gagal</string>
    <string name="login_success">Berhasil masuk</string>
    <string name="login_fail">Gagal masuk</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="account_question">Belum punya akun ?</string>
    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="name">Nama</string>
    <string name="welcome_desc">
       What are you looking for? \n
         We can help
    </string>
    <string name="message_login_page">Please complete your data</string>
    <string name="title_login_page">Welcome to Tenunara</string>
    <string name="signup">Register</string>
    <string name="title_signup_page">Fill in your personal data first</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_page">explore Page</string>
    <string name="home_page">home page</string>
    <string name="profile_page">profile page</string>
    <string name="welcome">Welcome, </string>
    <string name="explore_btn_page">Explore</string>
    <string name="home_btn_page">Home</string>
    <string name="profile_btn_page">Profile</string>
    <string name="scan_woven_fabric">Scan Woven Fabric</string>
    <string name="find_tenun_shop">Find Tenun Shop</string>
    <string name="find_tenun_training">Find Tenun Training</string>
    <string name="scan_history">Scan History</string>
    <string name="top_weekly_tenun">Top Weekly Tenun</string>
    <string name="background">background</string>
    <string name="user">User</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="username">pigokz</string>
    <string name="number_like">100</string>
    <string name="songket_type">Songket Palembang</string>
    <string name="likes">Likes</string>
    <string name="hint_search">Cari model tenun</string>

    <!-- String on the profile page -->
    <string name="btn_edt_profile">Edit Profile</string>
    <string name="edt_paswword">Edit Password</string>
    <string name="btn_finish">Finish Edit</string>
    <string name="now_pass">Now Password</string>
    <string name="new_pass">New Password</string>
    <string name="new_pass_once">New password once again</string>
    <string name="btn_edit_photo">Edit Photo</string>
    <string name="languange">Languange</string>
    <string name="dark_Mode">Dark Mode</string>
    <string name="setting_preference">Setting Preferences</string>
    <string name="welcome_profile">Hello, Tenuners </string>
    <string name="text_profile">Tenuners</string>
    <string name="name_profile">Name user</string>
    <string name="username2">Username</string>
    <string name="telephone">Telephone</string>
    <string name="change_pass">Change Password</string>
    <string name="enter_phone">Masukan Number Hp</string>
    <string name="current_pass">Current Password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="change">Change</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="succes_edt">Successfully updated profile</string>

    <!-- String on the history scan page -->
    <string name="history">History Scan</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="Desc">Description</string>

    <!-- String on the Scan woven page -->
    <string name="Scan">Scan Woven Fabric</string>
    <string name="succes_identified">Fabric Identified</string>
    <string name="title_woven">title woven</string>
    <string name="desc_woven">Minangkabau songket is known to have many choices of motifs that are not only interesting but also rich in meaning and philosophy.</string>
    <string name="post_woven">Post to Explore</string>
    <string name="Return">Return to Home</string>
    <string name="read_more">Read More…</string>
    <string name="failed_identified">The Fabric can\'t identified!</string>
    <string name="desc_failed">Maybe you can take a picture focus on motive.</string>
    <string name="desc_failed2">Keep Spirit!</string>
    <string name="try_again">Try Again</string>

    <string-array name="data_name">
        <item>gox</item>
        <item>Tenunara</item>
        <item>mantap</item>
        <item>indonesia</item>
        <item>Soekarno</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/onboarding_1</item>
        <item>@drawable/onboarding_2</item>
        <item>@drawable/onboarding_3</item>
        <item>@drawable/onboarding_4</item>
        <item>@drawable/imagelog</item>
    </integer-array>

    <!-- String on the top weekly page -->
    <string name="tittle_top_weekly">Top Weekly Tenun</string>
    <string name="top_number">#1</string>
    <string name="name_tenun">Name Tenun</string>
    <string name="see_photos">See photos…</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="title_activity_find_tenun_shop_maps">FindTenunShopMapsActivity</string>
    <string name="title_activity_find_tenun_training_maps">Find Tenun Training</string>
    <string name="gallery">Gallery</string>
    <string name="by_tenunara">By Tenunara</string>

    <string name="fail_take_picture">Fail to take picture</string>
    <string name="fail_show_camera">Fail to show camera</string>

    <!-- String on the about page -->
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="app_version">App Version</string>
    <string name="app_version_result">1.0.0</string>
    <string name="contributor">Contributor</string>
    <string name="path_one">From Machine Learning</string>
    <string name="path_two">From Mobile Development</string>
    <string name="path_three">From Cloud Computing</string>
    <string name="name_one">Fadjrin Diraja Muhammad</string>
    <string name="name_two">Maulia Savana Putri</string>
    <string name="name_three">Nadira Hanifah Nur\’aini</string>
    <string name="name_four">Deliana Rahma Azahra</string>
    <string name="name_five">Figo Alsistani</string>
    <string name="name_six">Gunawan Prasetyo</string>

</resources>