<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".main.ui.ScanSuccessFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_backk"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/tv_edt_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/Scan"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/ibmplexsansthailooped_semibold"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="524dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_scan">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:src="@drawable/scan_success"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/succes_identified"
            android:fontFamily="@font/ibmplexsans_bold"
            android:layout_marginTop="24dp"
            android:layout_marginStart="110dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_woven"
            android:layout_marginStart="130dp"
            android:fontFamily="@font/ibmplexsansthailooped_semibold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_woven"
            android:textAlignment="center"
            android:layout_marginTop="11dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/ibmplexsans_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_more"
            android:layout_marginStart="130dp"
            android:layout_marginTop="13dp"
            android:textColor="@color/blue"/>

        <Button
            android:id="@+id/postButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/ibmplexsans_medium"
            android:text="@string/post_woven"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/returnButton"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/blue"
            app:strokeWidth="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ibmplexsans_medium"
            android:text="@string/Return"
            android:textColor="@color/blue"/>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F2F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />



</androidx.constraintlayout.widget.ConstraintLayout>