<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_edit"
    tools:context=".main.ui.ui.about.AboutFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_backk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ibmplexsansthailooped_semibold"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tittle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_general"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsans_bold"
                android:text="@string/general"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsansthailooped_semibold"
                android:text="@string/app_version"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_general"
                app:layout_constraintTop_toBottomOf="@id/tv_general" />

            <TextView
                android:id="@+id/tv_app_version_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsans_regular"
                android:text="@string/app_version_result"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_app_version"
                app:layout_constraintTop_toBottomOf="@id/tv_app_version" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_first">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_contributor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsans_bold"
                android:text="@string/contributor"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_path_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsansthailooped_semibold"
                android:text="@string/path_one"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_contributor"
                app:layout_constraintTop_toBottomOf="@id/tv_contributor" />

            <TextView
                android:id="@+id/tv_person_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsans_regular"
                android:text="@string/name_one"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_path_one"
                app:layout_constraintTop_toBottomOf="@id/tv_path_one" />

            <TextView
                android:id="@+id/tv_person_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsans_regular"
                android:text="@string/name_two"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_person_one"
                app:layout_constraintTop_toBottomOf="@id/tv_person_one" />

            <TextView
                android:id="@+id/tv_person_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ibmplexsans_regular"
                android:text="@string/name_three"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_person_two"
                app:layout_constraintTop_toBottomOf="@id/tv_person_two" />

            <TextView
                android:id="@+id/tv_path_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsans_bold"
                android:text="@string/path_two"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_person_three"
                app:layout_constraintTop_toBottomOf="@id/tv_person_three" />

            <TextView
                android:id="@+id/tv_person_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsans_regular"
                android:text="@string/name_four"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_path_two"
                app:layout_constraintTop_toBottomOf="@id/tv_path_two" />

            <TextView
                android:id="@+id/tv_person_five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ibmplexsans_regular"
                android:text="@string/name_five"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_person_four"
                app:layout_constraintTop_toBottomOf="@id/tv_person_four" />

            <TextView
                android:id="@+id/tv_path_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:fontFamily="@font/ibmplexsansthailooped_semibold"
                android:text="@string/path_three"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_person_five"
                app:layout_constraintTop_toBottomOf="@id/tv_person_five" />

            <TextView
                android:id="@+id/tv_person_six"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:maxLines="3"
                android:paddingBottom="10dp"
                android:fontFamily="@font/ibmplexsans_regular"
                android:text="@string/name_six"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_path_three"
                app:layout_constraintTop_toBottomOf="@id/tv_path_three" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>